temporarily removed AddAbilities

--- a/ModularGameplayActors.uplugin
+++ b/ModularGameplayActors.uplugin
@@ -23,8 +23,21 @@
 	],
 	"Plugins": [
 		{
+			"Name": "EnhancedInput",
+			"Enabled": true
+		},
+		{
 			"Name": "ModularGameplay",
 			"Enabled": true
+		},
+		{
+			"Name": "GameplayAbilities",
+			"Enabled": true
+		},
+		{
+			"Name": "GameFeatures",
+			"Enabled": true
 		}
+
 	]
 }
