--- a/ModularGameplayActors.uplugin
+++ b/ModularGameplayActors.uplugin
@@ -4,7 +4,7 @@
 	"VersionName": "1.0",
 	"FriendlyName": "Modular Gameplay Actors",
 	"Description": "",
-	"Category": "Ancient Game",
+	"Category": "Modular Extensions",
 	"CreatedBy": "Epic Games, Inc.",
 	"CreatedByURL": "http://epicgames.com",
 	"DocsURL": "",
