--- a/GameFeatureActions.uplugin
+++ b/GameFeatureActions.uplugin
@@ -2,11 +2,11 @@
 	"FileVersion": 3,
 	"Version": 1,
 	"VersionName": "1.0",
-	"FriendlyName": "Modular Gameplay Actors",
+	"FriendlyName": "Game Feature Actions",
 	"Description": "",
 	"Category": "Modular Extensions",
-	"CreatedBy": "Epic Games, Inc.",
-	"CreatedByURL": "http://epicgames.com",
+	"CreatedBy": "John Farrow",
+	"CreatedByURL": "https://johnjfarrow.github.io/",
 	"DocsURL": "",
 	"MarketplaceURL": "",
 	"SupportURL": "",
